<resources>
    <string name="app_name">My NotePad</string>
    <string name="new_here">New Here ?</string>
    <string name="signup_now">SignUp Now</string>
    <string name="ready_sigup">All Ready Sigup Here?</string>
    <string name="click_here">Click Here</string>
    <string name="send">Send</string>
    <string name="title_activity_view_note">View_note</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="your_email">Your Email</string>
    <string name="your_name">Your Name</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
